Fixed aspect ratio jump

--- a/src/style.css
+++ b/src/style.css
@@ -4,14 +4,14 @@
     padding: 0;
 }
 
-/* html,
 body
 {
-    overflow: hidden;
-} */
+    height: 100%;
+}
 
 html
 {
+    height: 100%;
     background: #1e1a20;
 }
 
